--- a/css/main.css
+++ b/css/main.css
@@ -581,7 +581,7 @@ main .faq .inner .title {
 main .faq .inner .tab {
   display: flex;
   gap: 20px;
-  margin: 30px 0;
+  margin: 50px 0 30px;
 }
 main .faq .inner .tab li {
   color: var(--white);
@@ -609,18 +609,23 @@ main .faq .inner .contents .qna_list .que {
   display: flex;
   align-items: baseline;
   gap: 10px;
-  margin: 20px 0;
+  margin-bottom: var(--padding-30);
+  padding-bottom: var(--padding-30);
+  border-bottom: 1px solid var(--gray-opacity);
   cursor: pointer;
+}
+main .faq .inner .contents .qna_list:first-child .que {
+  padding-top: var(--padding-30);
+  border-top: 1px solid var(--gray-opacity);
 }
 main .faq .inner .contents .qna_list .que i {
   position: absolute;
-  right: 0;
-  top: 6px;
+  right: 20px;
   color: var(--blue);
   font-size: var(--font-content);
   transition: 300ms;
 }
-main .faq .inner .contents .qna_list.active .que i {
+main .faq .inner .contents .qna_list .que.active i {
   transform: rotate(-180deg);
   transition: 300ms;
 }
@@ -634,12 +639,19 @@ main .faq .inner .contents .qna_list .que p {
   font-size: var(--font-content);
 }
 main .faq .inner .contents .qna_list .ans {
-  display: none;
-  margin-bottom: var(--padding-30);
-}
-main .faq .inner .contents .qna_list .ans.active {
   display: flex;
   align-items: baseline;
+  height: 0;
+  opacity: 0;
+  transition: 300ms;
+}
+main .faq .inner .contents .qna_list .ans.active {
+  height: auto;
+  margin-bottom: var(--padding-30);
+  padding-bottom: var(--padding-30);
+  border-bottom: 1px solid var(--gray-opacity);
+  opacity: 1;
+  transition: 300ms;
 }
 main .faq .inner .contents .qna_list .ans b {
   color: var(--gray);
@@ -1398,7 +1410,6 @@ main .qna .inner .qna_view_title button:hover {
 }
 .result .qna_wrap .qna_list .qna .que_title {
   display: flex;
-  align-items: flex-end;
   justify-content: space-between;
   margin-bottom: 30px;
   padding-bottom: 30px;
@@ -1436,6 +1447,7 @@ main .qna .inner .qna_view_title button:hover {
 }
 .result .qna_wrap .qna_list .qna .que_title .icon {
   display: flex;
+  justify-content: flex-end;
   align-items: flex-end;
   gap: 10px;
 }
@@ -1722,7 +1734,7 @@ main .qna .inner .qna_view_title button:hover {
     margin-right: 2vw;
   }
   main .faq .inner .contents .qna_list .que p {
-    width: 80%;
+    width: 70%;
   }
   main .faq .inner .contents .qna_list .que i {
     top: 13px;
@@ -1791,9 +1803,6 @@ main .qna .inner .qna_view_title button:hover {
   .result .qna_wrap .qna_list .ans .profile {
     flex-direction: column;
     align-items: normal;
-  }
-  .result .qna_wrap .qna_list .ans .profile .profile_box {
-    margin-bottom: var(--padding-10);
   }
   .result .qna_wrap .qna_list .ans .profile .siren {
     justify-content: flex-end;
