--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -101,10 +101,11 @@
 
 /* Dots */
 .slick-dots {
-  justify-content: center;
+  position: absolute;
+  bottom: 20px;
   width: 100%;
   padding: 0;
-  margin: 20px auto 0;
+  margin: 0 auto;
 
   list-style: none;
 
@@ -115,10 +116,9 @@
 
   display: inline-block;
 
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 4px;
   margin: 0 5px;
-  padding: 0;
 
   cursor: pointer;
 }
@@ -128,10 +128,8 @@
 
   display: block;
 
-  width: 20px;
-  height: 20px;
-  padding: 5px;
-
+  width: 40px;
+  height: 4px;
   cursor: pointer;
 
   color: transparent;
@@ -156,20 +154,20 @@
   top: 0;
   left: 0;
 
-  width: 10px;
-  height: 10px;
+  width: 40px;
+  height: 2px;
 
   content: '';
   text-align: center;
 
-  opacity: 0.25;
-  background-color: var(--blue);
-  border-radius: 100%;
+  opacity: 0.45;
+  background-color: var(--white);
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 .slick-dots li.slick-active button:before {
-  opacity: 0.75;
-  color: var(--blue);
+  height: 4px;
+  opacity: 1;
+  color: var(--white);
 }
