--- a/css/main.css
+++ b/css/main.css
@@ -753,7 +753,6 @@ main .search .title {
 main .search .input_wrap {
   position: relative;
   width: var(--size-100);
-  padding: 10px 30px;
   border: 5px solid var(--sky-blue);
   transition: 300ms;
 }
@@ -763,7 +762,8 @@ main .search .input_wrap input {
   color: var(--blue);
   font-size: var(--font-large);
   font-weight: 500;
-  border: 0;
+  padding: 10px 30px;
+  border: 0 !important;
   outline: none;
 }
 main .search .input_wrap input::placeholder {
@@ -1383,7 +1383,7 @@ main .partners .inner ul li img {
 }
 .myfaq .inner .contents .qna_list .ans {
   display: none;
-  padding: var(--padding-30-0);
+  padding: var(--padding-30);
   border-top: 1px solid var(--gray);
 }
 .myfaq .inner .contents .qna_list .ans.active {
@@ -2529,6 +2529,7 @@ main .qna .inner .qna_view_title button:hover {
   main .faq .inner .title {
     margin-bottom: var(--padding-10);
   }
+  .myfaq .inner .contents .qna_list .que .left b img,
   .result .qna_wrap .qna_list .qna .que_title .title img,
   main .qna .inner .qna_list .que .title b img,
   main .faq .inner .contents .qna_list .que b img,
@@ -2651,6 +2652,9 @@ main .qna .inner .qna_view_title button:hover {
   }
   .myfaq .inner .contents .qna_list .que .right {
     width: 30%;
+  }
+  .myfaq .inner .contents .qna_list .ans {
+    padding: var(--padding-30-0);
   }
 
   .qna_write {
