--- a/css/main.css
+++ b/css/main.css
@@ -2308,7 +2308,6 @@ main .qna .inner .qna_view_title button:hover {
     padding: 0 3vw;
   }
   footer .f_top ul li a {
-    font-size: var(--font-copy);
     transform: scale(0.9);
   }
   footer .f_top ul li a .pc {
@@ -2339,7 +2338,8 @@ main .qna .inner .qna_view_title button:hover {
     flex-direction: row;
   }
   footer .inner .contents address p {
-    font-size: var(--font-medium);
+    font-size: var(--font-large);
+    font-weight: 500;
     line-height: 1.5;
   }
   footer .inner .contents address p:first-child {
